--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ QuadGK = "2.0"
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [targets]
-test = ["Test", "Combinatorics"]
+test = ["Test", "Combinatorics", "Random"]
