--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 
 [compat]
 julia = "1.10"
-ForwardDiff = "1.0"
+ForwardDiff = "0.10, 1.0"
 JuMP = "1.0"
 NLopt = "1.1"
 Setfield = "1.1"
