--- a/Project.toml
+++ b/Project.toml
@@ -36,4 +36,4 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
 
 [targets]
-test = ["Test", "Combinatorics", "Random", "Distributed"]
+test = ["Test", "Combinatorics", "Random", "Distributed", "ProtoBuf"]
