--- a/Project.toml
+++ b/Project.toml
@@ -4,42 +4,43 @@ version = "1.0.0"
 
 [deps]
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
-Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
-StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-
-[compat]
-julia = "1.10"
-ForwardDiff = "0.10, 1.0"
-JuMP = "1.0"
-NLopt = "1.2"
-Setfield = "1.1"
-StaticArrays = "1.9"
-LinearAlgebra = "1.10"
-QuadGK = "2.0"
-ProtoBuf = "1.0"
+Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
+Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [weakdeps]
-ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
-QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
+ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
+QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 
 [extensions]
+MSSimIonChainExt = ["JuMP", "NLopt"]
 MSSimProtoBufExt = ["ProtoBuf"]
 MSSimPureNumericExt = ["QuadGK"]
-MSSimIonChainExt = ["JuMP", "NLopt"]
+
+[compat]
+ForwardDiff = "0.10, 1.0"
+JuMP = "1.0"
+LinearAlgebra = "1.10"
+NLopt = "1.2"
+ProtoBuf = "1.0"
+QuadGK = "2.0"
+Setfield = "1.1"
+Static = "1.0"
+StaticArrays = "1.9"
+julia = "1.10"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
-ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
-QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
+ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
+QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Combinatorics", "Random", "Distributed", "ProtoBuf", "QuadGK",
-        "JuMP", "NLopt"]
+test = ["Test", "Combinatorics", "Random", "Distributed", "ProtoBuf", "QuadGK", "JuMP", "NLopt"]
